--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-rate-limit": "^5.3.0",
     "express-validator": "^6.12.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.0.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
     "pug": "2.0.0-beta11"
