--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.0.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "uuid": "^8.3.2"
   }
 }
